Rmq commit