@@ -4,51 +4,54 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'groovy'
 	id 'jacoco'
+	//id 'io.freefair.lombok' version '5.3.0'
 }
 
 group = 'com.SpringBoot'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
+
 }
 
 repositories {
 	mavenCentral()
 }
-//sourceSets {
-//	main {
-//		java {
-//			srcDirs = ['src/main/java']
-//		}
-//		resources {
-//			srcDirs = ['src/main/resources']
-//		}
-//	}
-//	test {
-//		java {
-//			srcDirs = ['src/test/groovy']
-//		}
-//		resources {
-//			srcDirs = ['src/test/resources']
-//		}
-//	}
-//}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.springframework:spring-webmvc:6.1.3'
+	implementation 'org.springframework:spring-webmvc:6.1.3' // Remove if not needed
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.security:spring-security-web:6.2.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.bouncycastle:bcpkix-jdk15on:1.69'
 	testImplementation 'org.codehaus.groovy:groovy-all:3.0.20'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	//implementation 'org.projectlombok:lombok:1.18.30'
+}
 
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.3"
+	}
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+//tasks.withType(JavaCompile) {
+//	options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED']
+//}
+
+//compileJava {
+//	options.compilerArgs += ['-Xlint:none']
+//	options.fork = true
+//	options.forkOptions.jvmArgs = ['--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED']
+//}
+
